2009-12-23  Jakub Jelinek  <jakub@redhat.com>

	PR rtl-optimization/42475
	* combine.c (make_compound_operation) <case SUBREG>: Use mode of
	SUBREG_REG (x) instead of tem's mode.

2009-12-21  Jakub Jelinek  <jakub@redhat.com>

	PR rtl-optimization/42429
	* reload.c (find_reloads_subreg_address): When adjusting mode of
	MEM, update also MEM_SIZE if it is set.

2009-12-17  Dave Korn  <dave.korn.cygwin@gmail.com>

	* config/i386/cygwin.h (LINK_SPEC): Add -tsaware flag if !mno-cygwin.

2009-12-11  Ramana Radhakrishnan  <ramana.radhakrishnan@arm.com>

	PR target/42263
	Backport from mainline

	2009-12-03  Richard Earnshaw  <rearnsha@arm.com>

	* arm/linux-atomic.c (SYNC_LOCK_RELEASE): Place memory barrier
	before the lock release.

2009-12-11  Ramana Radhakrishnan  <ramana.radhakrishnan@arm.com>

	PR target/42263
	2009-08-11  Andrew Haley  <aph@redhat.com>
	* config/arm/arm.c (arm_init_libfuncs): Add __sync_synchronize.

2009-12-11  Ramana Radhakrishnan  <ramana.radhakrishnan@arm.com>

	PR target/41196
	2009-10-14  Daniel Gutson  <dgutson@codesourcery.com>
	
	* config/arm/neon.md (neon_vshll_n<mode>): Checking Bounds
	fixed.

2009-12-11  Ramana Radhakrishnan  <ramana.radhakrishnan@arm.com>

	2009-10-05  Doug Kwan  <dougkwan@google.com>

	PR rtl-optimization/41574
	* combine.c (distribute_and_simplify_rtx): Quit if RTX mode is
	floating point and we are not doing unsafe math optimizations.

2009-12-11  Ramana Radhakrishnan  <ramana.radhakrishnan@arm.com>
	
	PR target/41939
	Backport from mainline:
	2009-06-05  Julian Brown  <julian@codesourcery.com>

	* config/arm/ieee754-df.S (cmpdf2): Avoid writing below SP.
	* config/arm/ieee754-sf.S (cmpsf2): Likewise.
	
2009-12-09  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	* config/s390/s390.md ("copysign<mode>3"): Pattern removed.

2009-12-07  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/i386.md (*iorqi_ext_2): Fix insn mnemonic typo.

2009-12-06  Richard Henderson  <rth@redhat.com>
