@@ -1,3 +1,8 @@
+2009-12-27  Martin Jambor  <mjambor@suse.cz>
+
+	PR tree-optimization/42231
+	* gcc.c-torture/execute/pr42231.c: New test.
+
 2009-12-22  Jason Merrill  <jason@redhat.com>
 
 	PR c++/42331
